Change background color of page to

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             achieve, and adds time each time you accomplish a set amount of time on an achieve.
                         </p>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fasp fa-check"></i></span>
                             Task management website to track and log tasks with a pomodoro timer
                         </li>
                         <li>
@@ -296,7 +296,37 @@
         <div class="resume-section-content">
             <h2 class="mb-5">Miniprojects</h2>
             <div class="container">
-                <div class="row">
+                <div class="row mt-1">
+                    <div class="col-lg-6 col-xl-4">
+                        <div class="card">
+                            <div class="card-body m-2">
+                                <h5 class="card-title">Achieve</h5>
+                                <!--                    <img src="..." class="card-img-top" alt="...">-->
+                                <p class="card-text">My first solo project in full stack development, Rango is a web
+                                    application that allows users to view user created categories and access its web
+                                    pages, which are ranked according to views.</p>
+                                <div>Additional Features</div>
+                                <ul class="fa-ul mb-0">
+                                    <li>
+                                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                                       User authentication
+                                    </li>
+                                    <li>
+                                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                                        Profile creation
+                                    </li>
+                                    <li>
+                                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                                        Search Categories via Bing API
+                                    </li>
+                                </ul>
+                                <p>Made with: Django, Bing API, HTML, CSS, JavaScript, AJAX</p>
+                                <a href="https://codepen.io/riccocruz/pen/QWEELqL" class="btn btn-info">Visit
+                                    Project</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-6 col-xl-4">
                         <div class="card">
                             <div class="card-body m-2">
@@ -325,6 +355,8 @@
                         </div>
 
                     </div>
+                </div>
+                <div class="row mt-1">
                     <div class="col-lg-6 col-xl-4">
                         <div class="card">
                             <div class="card-body m-2">
@@ -336,7 +368,6 @@
                                     Project</a>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
