change software testing environment to just software environment

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Integrated Coverity tool into software testing environment using a batch file to ensure
+                            Integrated Coverity tool into software environment using a batch file to ensure
                             MISRA compliance
                         </li>
                     </ul>
@@ -428,7 +428,7 @@
                                         Search Categories via Bing API
                                     </li>
                                 </ul>
-                                <p>Made with: Django, Bing API, HTML, Bootstrap, JavaScript, AJAX</p>
+                                <p>Made with: Django, Bing API, HTML, Bootstrap, JavaScript, jQuery</p>
                                 <a href="https://codepen.io/riccocruz/pen/QWEELqL" class="btn btn-info">Visit
                                     Project</a>
                             </div>
